@@ -1,105 +1,0 @@
-package tutorial.survey;
-
-import java.util.*;
-import com.primix.tapestry.*;
-import com.primix.tapestry.components.*;
-
-/*
- * Tapestry Web Application Framework
- * Copyright (c) 2000 by Howard Ship and Primix Solutions
- *
- * Primix Solutions
- * One Arsenal Marketplace
- * Watertown, MA 02472
- * http://www.primix.com
- * mailto:hship@primix.com
- * 
- * This library is free software.
- * 
- * You may redistribute it and/or modify it under the terms of the GNU
- * Lesser General Public License as published by the Free Software Foundation.
- *
- * Version 2.1 of the license should be included with this distribution in
- * the file LICENSE, as well as License.html. If the license is not
- * included with this distribution, you may find a copy at the FSF web
- * site at 'www.gnu.org' or 'www.fsf.org', or you may write to the
- * Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139 USA.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- */
-
-/**
- *  @version $Id$
- *  @author Howard Ship
- *
- */ 
-
-public class RaceModel implements IPropertySelectionModel
-{
-	private static final Race[] options =
-		new Race[] 
-		{ Race.CAUCASIAN, Race.AFRICAN, Race.ASIAN, Race.INUIT, Race.MARTIAN 
-		};
-	
-	
-	private Locale locale;
-	private String labels[];
-	
-	public RaceModel(Locale locale)
-	{
-		this.locale = locale;
-	}
-	
-	public int getOptionCount()
-	{
-		return options.length;
-	}
-	
-	public Object getOption(int index)
-	{
-		return options[index];
-	}
-	
-	public String getLabel(int index)
-	{
-		if (labels == null)
-			readLabels();
-		
-		return labels[index];
-	}
-	
-	private void readLabels()
-	{
-		ResourceBundle bundle;
-		String key;
-		int i;
-		
-		bundle = ResourceBundle.getBundle("tutorial.survey.RaceModelStrings", locale);
-		
-		labels = new String[options.length];
-		for (i = 0; i < options.length; i++)
-		{
-			key = options[i].getEnumerationId();
-			labels[i] = bundle.getString(key);
-		}
-		
-	}
-	
-	public String getValue(int index)
-	{
-		return Integer.toString(index);
-	}
-	
-	public Object translateValue(String value)
-	{
-		int index;
-		
-		index = Integer.parseInt(value);
-		
-		return options[index];
-	}
-}
